# WsVideoEditor

./: .gitignore  CMakeLists.txt  README.md
WsVideoEditorAndroid/: .gitignore  settings.gradle
WsVideoEditorAndroid/app/: build.gradle
WsVideoEditorAndroid/app/src/main/: AndroidManifest.xml
WsVideoEditorAndroid/app/src/main/java/com/whensunset/wsvideoeditor/test/: MainActivity.java
WsVideoEditorAndroid/app/src/main/res/values/: strings.xml
WsVideoEditorAndroid/gradle/wrapper/: gradle-wrapper.properties
WsVideoEditorAndroid/wsvideoeditor/: .gitignore  build.gradle
WsVideoEditorAndroid/wsvideoeditor/src/main/: AndroidManifest.xml
WsVideoEditorAndroid/wsvideoeditor/src/main/res/values/: strings.xml
android/: .gitignore  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/com/whensunset/mytiktokvideoeditor/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/ffmpeg-cpp/include/arm64-v8a/libavformat/: avformat.h  internal.h  url.h
android/ffmpeg-cpp/include/arm64-v8a/libavkwai/: version.h
android/ffmpeg-cpp/include/arm64-v8a/libavutil/: avutil.h  ffversion.h
android/ffmpeg-cpp/include/arm64-v8a/libffmpeg/: config.h
android/ffmpeg-cpp/include/armeabi-v7a/libavcodec/: avcodec.h
android/ffmpeg-cpp/include/armeabi-v7a/libavfilter/: avfilter.h
android/ffmpeg-cpp/include/armeabi-v7a/libavutil/: error.h  frame.h
android/ffmpeg-cpp/include/armeabi-v7a/libffmpeg/: config.h
android/gradle/wrapper/: gradle-wrapper.properties
android/wsvideoeditor-sdk/: build.gradle
android/wsvideoeditor-sdk/src/main/: AndroidManifest.xml
android/wsvideoeditor-sdk/src/main/java/com/whensunset/wsvideoeditorsdk/: WsMediaPlayer.java  WsMediaPlayerView.java  WsVideoEditorUtils.java
android/wsvideoeditor-sdk/src/main/java/com/whensunset/wsvideoeditorsdk/audio/: AudioPlayByAudioTrack.java  AudioTimestampPoller.java  AudioTrackPositionTracker.java
android/wsvideoeditor-sdk/src/main/jni/: CMakeLists.txt
android/wsvideoeditor-sdk/src/main/jni/wsvideoeditorsdkjni/: android_logger.cc  android_logger.h  audio_player_by_android.cpp  audio_player_by_android.h  com_whensunset_wsvideoeditorsdk_WsMediaPlayer.cc  com_whensunset_wsvideoeditorsdk_WsMediaPlayer.h  com_whensunset_wsvideoeditorsdk_WsVideoEditorUtils.cc  com_whensunset_wsvideoeditorsdk_WsVideoEditorUtils.h  gl3stub.h  gl3stub_wrapper.c  jni_helper.cc  jni_helper.h
android/wsvideoeditor-sdk/src/main/jni/wsvideoeditorsdkjni/inner/: com_whensunset_wsvideoeditorsdk_inner_VideoDecoderService.cc  com_whensunset_wsvideoeditorsdk_inner_VideoDecoderService.h
android/wsvideoeditor-sdk/src/main/res/values/: strings.xml
android/wsvideoeditor-test/: build.gradle
android/wsvideoeditor-test/src/main/: AndroidManifest.xml
android/wsvideoeditor-test/src/main/java/com/whensunset/wsvideoeditortest/: TestActivity.java  VideoActivity.java
android/wsvideoeditor-test/src/main/res/layout/: test_activity.xml  video_activity.xml
android/wsvideoeditor-test/src/main/res/values/: strings.xml
buildtools/: .gitignore  build_proto.sh  test_proto_build.sh
flutter-wsvideoeditor/: .flutter-plugins  .gitignore  .metadata  pubspec.yaml
flutter-wsvideoeditor/android/: CMakeLists.txt  build.gradle  settings.gradle
flutter-wsvideoeditor/android/flutter-cpp/: flutter_WsMediaPlayer.cpp  flutter_WsMediaPlayer.h  flutter_WsVideoEditorUtils.cpp  flutter_WsVideoEditorUtils.h
flutter-wsvideoeditor/android/src/main/: AndroidManifest.xml
flutter-wsvideoeditor/android/src/main/kotlin/com/example/native_add/: NativeAddPlugin.kt
flutter-wsvideoeditor/example/: .flutter-plugins-dependencies  README.md  pubspec.yaml
flutter-wsvideoeditor/example/android/: build.gradle
flutter-wsvideoeditor/example/android/app/: build.gradle
flutter-wsvideoeditor/example/android/app/src/main/: AndroidManifest.xml
flutter-wsvideoeditor/example/android/app/src/profile/: AndroidManifest.xml
flutter-wsvideoeditor/example/ios/Runner/: Info.plist
flutter-wsvideoeditor/example/ios/Runner.xcodeproj/: project.pbxproj
flutter-wsvideoeditor/example/lib/: main.dart
flutter-wsvideoeditor/example/test/: widget_test.dart
flutter-wsvideoeditor/example/web/: index.html
flutter-wsvideoeditor/ios/: native_add.podspec
flutter-wsvideoeditor/ios/Classes/: NativeAddPlugin.h  NativeAddPlugin.m  SwiftNativeAddPlugin.swift
flutter-wsvideoeditor/lib/: native_add.dart
flutter-wsvideoeditor/test/: native_add_test.dart
sharedcpp/wsvideoeditorsdk/: audio_player.h  frame_renderer.cc  frame_renderer.h  native_ws_media_player.cc  native_ws_media_player.h  preview_timeline.cc  preview_timeline.h  ref_clock.h  time_message_center.h  ws_editor_video_sdk_utils.cpp  ws_editor_video_sdk_utils.h
sharedcpp/wsvideoeditorsdk/audio_decode/: audio_decode_context.cc  audio_decode_context.h  audio_decode_service.cc  audio_decode_service.h
sharedcpp/wsvideoeditorsdk/base/: audio_sample_ring_buffer.h  av_utils.cc  av_utils.h  blocking_queue.h  constants.h  platform_logger.h
sharedcpp/wsvideoeditorsdk/opengl/: avframe_rgba_texture_converter.cc  avframe_rgba_texture_converter.h  copy_argb_shader_program.cc  copy_argb_shader_program.h  gl_utils.cc  gl_utils.h  platform_gl_headers.h  shader_program_pool.cc  shader_program_pool.h  texture_loader.cc  texture_loader.h  ws_final_draw_program.cc  ws_final_draw_program.h  ws_shader_program.cc  ws_shader_program.h  ws_texture_fbo.cc  ws_texture_fbo.h  yuv420_to_rgba_shader_program.cc  yuv420_to_rgba_shader_program.h
sharedcpp/wsvideoeditorsdk/prebuilt_protobuf/: ws_video_editor_sdk.pb.cc  ws_video_editor_sdk.pb.h  ws_video_editor_sdk_android_jni.pb.cc  ws_video_editor_sdk_android_jni.pb.h
sharedcpp/wsvideoeditorsdk/video_decode/: decode_service_common.h  video_decode_context.cpp  video_decode_context.h  video_decode_service.cc  video_decode_service.h
sharedproto/: ws_video_editor_sdk.proto  ws_video_editor_sdk_android_jni.proto
(+26 files in other folders)
